# binance-trading-bot

./: .env.local  README.md  main.py  pyproject.toml
connectors/: binance_futures.py
